# quarto-light-dark-experiments

./: .gitignore  .nojekyll  README.md  _quarto.yml  altair.qmd  great-tables.qmd  gt.qmd  index.html  light-dark-cell.lua  light-dark-jupyter.lua  light-dark.css  light_dark.py  matplotlib.qmd  maximal.qmd  plotly-python.qmd  plotly-r.qmd  plotnine.qmd  pyproject.toml  seaborn.qmd  slate-brand.yml  test-matplotlib.qmd  thematic.qmd  united-brand.yml
count-output-displays/: altair.qmd  bokeh.qmd  flextable.qmd  great-tables.qmd  gt.qmd  light-dark-cod-sequence.lua  light-dark-fenced-divs.lua  light-dark.css  matplotlib.qmd  plotly-python.qmd  plotly-r.qmd  plotnine.qmd  pygal.qmd  remove-contradictory-light-dark.lua  seaborn.qmd  show_ptl.py  thematic.qmd  united-brand.yml
count-output-displays-captions-and-crossrefs/: altair.qmd  bokeh.qmd  great-tables.qmd  gt.qmd  light-dark-cod-sequence.lua  matplotlib.qmd  plotly-python.qmd  plotly-r.qmd  plotnine.qmd  pygal.qmd  seaborn.qmd  thematic.qmd
css-filters/: autobrand-demo.qmd  autobrand.ts  color.ts  vec.ts
dark-brand/: altair.qmd  bokeh.qmd  gt.qmd  matplotlib.qmd  plotly-python.qmd  plotnine.qmd  seaborn.qmd
fenced-divs/: README.md  altair.qmd  great-tables.qmd  gt.qmd  light-dark-fenced-divs.lua  light_dark.py  matplotlib.qmd  plotly-python.qmd  plotly-r.qmd  plotnine.qmd  seaborn.qmd  slate-brand.yml  thematic.qmd  united-brand.yml
helpers/: altair.qmd  bokeh.qmd  flextable.qmd  ggiraph.qmd  ggplot-helpers.R  ggplot.qmd  great-tables.qmd  gt.qmd  heatmaply.qmd  leaflet.qmd  matplotlib.qmd  plotly-helpers.R  (+6 more)
(+28 files in other folders)
